--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pizza-planet</title>
-    <link rel="icon" href="/pizza-planet/public/pizzas/pizza.png" />
+    <link rel="icon" href="public/pizzas/pizza.png" />
   </head>
   <body>
     <div id="root"></div>
